syntax = "proto3";

import "google/protobuf/timestamp.proto";
import "sensr_proto/global_type.proto";
import "sensr_proto/type.proto";

package sensr_proto;

message ObjectShape {
  google.protobuf.Timestamp time_stamp = 1;
  int32 id = 2;
  bytes points = 3;
}

message ObjectHistory {
  google.protobuf.Timestamp time_stamp = 1;
  int32 id = 2;
  repeated Vector3 history = 3;
}

message ZoneConfigPlus {
  message Zone {
    int32 id = 1;
    string name = 2;
    PolygonBox pbox = 3;
    string type = 4;
    repeated int32 object_ids = 5;
  }
  repeated Zone zones = 1;
}